Added basic navigation for routes

--- a/src/components/navigation/Menu.module.scss
+++ b/src/components/navigation/Menu.module.scss
@@ -7,6 +7,9 @@
   right: 0%;
   overflow: hidden;
   transform: translate(105%, 0%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
 
   background-color: #fff;
@@ -17,93 +20,77 @@
   &.active {
     transform: translate(0%, 0%);
   }
+
+  ul {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    a {
+      text-decoration-line: none;
+      transition: 0.3s;
+      color: #005CA9;
+
+      &:first-child li {
+        border-top: none;
+      }
+
+      &:hover {
+        color: white;
+        background-color: #005CA9;
+        box-shadow: inset 0px 0px 25px rgba(0, 0, 0, 0.75);
+      }
+
+      li {
+        width: 90%;
+        line-height: calc((100vh - 3* var(--navHeight)) / var(--navElements));
+        border-top: rgba(0, 93, 169, 0.75) solid 0.5px;
+        font-size: 1.5rem;
+        font-weight: 500;
+        text-transform: uppercase;
+      }
+
+    }
+  }
 }
-
-.menu ul {
-  width: 100%;
-  margin: 0px auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  list-style: none;
-}
-
-.menu ul a {
-  display: flex;
-  width: 100%;
-  text-decoration-line: none;
-  transition: 0.3s;
-  color: #005CA9;
-
-}
-
-.menu ul a li {
-  width: 90%;
-  margin: 0px auto;
-  line-height: calc((100vh - 3* var(--navHeight)) / var(--navElements));
-  font-weight: 500;
-  font-size: 1.5rem;
-  text-transform: uppercase;
-  border-top: rgba(0, 93, 169, 0.75) solid 0.5px;
-}
-
-.menu ul a:first-child li {
-  border-top: none;
-}
-
-.menu ul a:hover {
-  color: white;
-  background-color: #005CA9;
-  box-shadow: inset 0px 0px 25px rgba(0, 0, 0, 0.75);
-}
-
-.active_page {
-  color: white !important;
-  background-color: #005CA9;
-  box-shadow: inset 0px 0px 25px rgba(0, 0, 0, 0.75);
-}
-
-
 
 @media (min-width: 992px) {
   .menu {
-    position: relative;
-    width: 100%;
     margin: 0 auto;
-    height: var(--menuHeight);
+    width: 100%;
     position: static;
+    height: var(--menuHeight);
     box-shadow: none;
     transform: translate(0%, 0%);
-  }
 
-  .menu ul {
-    position: static;
-    display: flex;
-    transform: translate(0%, 0%);
-  }
+    ul {
+      display: flex;
+      flex-direction: row;
+      transform: translate(0%, 0%);
 
-  .menu ul a {
-    border-left: rgba(0, 93, 169, 0.75) solid 0.5px;
-  }
+      a {
+        flex-grow: 1;
+        border-left: rgba(0, 93, 169, 0.75) solid 0.5px;
 
-  .menu ul a li {
-    display: flex;
-    justify-content: center;
-    height: var(--menuHeight);
-    margin: 0px auto;
-    line-height: var(--menuHeight);
-    font-weight: 500;
-    font-size: 1.5rem;
-    border: none;
-  }
+        &:first-child {
+          border-left: none;
+        }
 
-  .menu ul a:first-child {
-    border-left: none;
-  }
-
-  .menu img {
-    align-self: center;
-    height: 60%;
+        li {
+          height: var(--menuHeight);
+          margin: 0px auto;
+          line-height: var(--menuHeight);
+          border: none;
+        }
+      }
+    }
   }
 }
+
+// .menu ul a .active_page {
+//   color: white !important;
+//   background-color: #005CA9;
+//   box-shadow: inset 0px 0px 25px rgba(0, 0, 0, 0.75);
+// }
