--- a/src/components/navigation/Menu.module.scss
+++ b/src/components/navigation/Menu.module.scss
@@ -4,21 +4,19 @@
   z-index: 10;
   top: var(--navHeight);
   bottom: 0;
-  right: 0%;
+  right: 0;
   overflow: hidden;
-  transform: translate(105%, 0%);
+  transform: translateX(105%);
   display: flex;
   flex-direction: column;
   justify-content: center;
-
-
   background-color: #fff;
   text-align: center;
   box-shadow: -5px 10px 10px rgba(0, 0, 0, 0.33);
   transition: transform 0.4s ease;
 
   &.active {
-    transform: translate(0%, 0%);
+    transform: translateX(0%);
   }
 
   ul {
@@ -29,6 +27,9 @@
     justify-content: center;
 
     a {
+
+      display: flex;
+      justify-content: center;
       text-decoration-line: none;
       transition: 0.3s;
       color: #005CA9;
@@ -63,12 +64,11 @@
     position: static;
     height: var(--menuHeight);
     box-shadow: none;
-    transform: translate(0%, 0%);
+    transition: none;
+    transform: none;
 
     ul {
-      display: flex;
       flex-direction: row;
-      transform: translate(0%, 0%);
 
       a {
         flex-grow: 1;
