--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,9 +7,8 @@
 html {
   font-family: Roboto, sans-serif;
   font-size: 10px;
-  /* scroll-behavior: smooth; */
+  scroll-behavior: smooth;
 }
-
 
 :root {
   --navHeight: 45px;
@@ -27,4 +26,9 @@ h2 {
   text-transform: uppercase;
 
   color: #005CA9;
+}
+
+.resize-transition-stopper * {
+  animation: none !important;
+  transition: none !important;
 }
