--- a/src/components/main-page-content/charity-banner/CharityBanner.module.scss
+++ b/src/components/main-page-content/charity-banner/CharityBanner.module.scss
@@ -4,7 +4,7 @@
   max-width: 1920px;
   height: 50vh;
   max-height: 700px;
-  background: url("../../images/img2.jpg") top no-repeat;
+  background: url("../../../images/img2.jpg") top no-repeat;
   background-size: cover;
 
 
