--- a/src/components/main-page-content/heading/Heading.module.scss
+++ b/src/components/main-page-content/heading/Heading.module.scss
@@ -5,7 +5,7 @@
   margin: var(--navHeight) auto 0 auto;
   overflow: hidden;
   min-height: calc(100vh - var(--navHeight));
-  background: url("../../images/img1.jpg") center no-repeat;
+  background: url("../../../images/img1.jpg") center no-repeat;
   background-size: cover;
 
   &:after {
