--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,6 +27,16 @@ h2 {
   color: #005CA9;
 }
 
+h3 {
+  margin: 20px 0 20px 0;
+  text-align: center;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 29px;
+  min-height: 29px;
+}
+
 hr {
   margin: 25px auto 25px auto;
   max-width: 1280px;
