--- a/src/components/terms-and-conditions/TermsAndConditions.module.scss
+++ b/src/components/terms-and-conditions/TermsAndConditions.module.scss
@@ -4,13 +4,9 @@
 
 .header {
   @include subpage-header();
-  background: url("../../images/headings/img-results.jpg") top no-repeat;
+  background: url("../../images/headings/img-routes.jpg") no-repeat;
   background-size: cover;
-
 }
 
-.results {
-  @include subpage-content();
-}
 
 @include subpage-header-breakpoints();
