--- a/src/styles/subpage-header.scss
+++ b/src/styles/subpage-header.scss
@@ -3,6 +3,8 @@
   width: 100%;
   max-width: 1920px;
   height: calc(35vh - var(--menuHeight));
+  min-height: 150px;
+
   max-height: 640px;
   display: flex;
   justify-content: center;
