Added terms and condition content

--- a/src/components/terms-and-conditions/TermsAndConditions.module.scss
+++ b/src/components/terms-and-conditions/TermsAndConditions.module.scss
@@ -8,5 +8,34 @@
   background-size: cover;
 }
 
+.content {
+  @include subpage-content();
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .terms {
+    margin: 0 auto;
+    max-width: 900px;
+    width: 90%;
+    font-size: 1.6rem;
+  }
+
+  ul {
+    list-style: disc;
+    margin: 5px 0 25px 40px;
+
+    li {
+      margin-bottom: 5px;
+      line-height: 150%;
+    }
+  }
+
+  h3 {
+    margin: auto;
+    text-align: left;
+    text-transform: uppercase;
+  }
+}
 
 @include subpage-header-breakpoints();
