--- a/src/components/gallery/Gallery.module.scss
+++ b/src/components/gallery/Gallery.module.scss
@@ -11,6 +11,24 @@
 
 .content {
   @include subpage-content();
+
+  ul {
+    list-style: none;
+    text-align: center;
+    font-size: 1.6rem;
+
+    a {
+      color: black;
+      text-decoration: none;
+      line-height: 1.5;
+      transition: 0.2s;
+      text-decoration: underline;
+
+      &:hover {
+        color: #005CA9;
+      }
+    }
+  }
 }
 
 @include subpage-header-breakpoints();
