ScrollToTop added (when path change)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
 html {
   font-family: Roboto, sans-serif;
   font-size: 10px;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 
 :root {
