--- a/src/components/results/Results.module.scss
+++ b/src/components/results/Results.module.scss
@@ -4,9 +4,8 @@
 
 .header {
   @include subpage-header();
-  background: url("../../images/headings/img-results.jpg") top no-repeat;
+  background: url("../../images/headings/img-results.jpg") center no-repeat;
   background-size: cover;
-
 }
 
 .results {
