--- a/src/styles/subpage-header-breakpoints.scss
+++ b/src/styles/subpage-header-breakpoints.scss
@@ -13,8 +13,13 @@
   }
 
   @media (min-width: 992px) {
-    .header h2 {
-      font-size: 50px;
+    .header {
+      min-height: 250px;
+
+      h2 {
+        font-size: 50px;
+      }
     }
+
   }
 }
