Button refactor, regulations change

--- a/src/components/registration/Registration.module.scss
+++ b/src/components/registration/Registration.module.scss
@@ -12,6 +12,7 @@
 .content {
   @include subpage-content();
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
