--- a/src/components/main-page-content/gallery-banner/GalleryBanner.module.scss
+++ b/src/components/main-page-content/gallery-banner/GalleryBanner.module.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
   height: 50vh;
   max-height: 700px;
-  background: url("../../../images/img3.jpg") center no-repeat;
+  background: url("../../../assets/images/img3.jpg") center no-repeat;
   background-attachment: fixed;
   background-size: cover;
 
