--- a/src/components/atoms/Button.module.scss
+++ b/src/components/atoms/Button.module.scss
@@ -1,6 +1,8 @@
 .button {
   margin: 10px 0;
-  width: 144px;
+  width: fit-content;
+  min-width: 144px;
+  padding: 0 25px;
   height: 45px;
   color: #005CA9;
   border: 1px solid #005CA9;
