--- a/src/components/main-page/latest-news/LatestNews.module.scss
+++ b/src/components/main-page/latest-news/LatestNews.module.scss
@@ -1,6 +1,9 @@
 .wrap {
   max-width: 1280px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   h2 {
     margin-bottom: 20px;
