--- a/src/components/atoms/Button.module.scss
+++ b/src/components/atoms/Button.module.scss
@@ -22,3 +22,18 @@
     cursor: pointer;
   }
 }
+
+.disabled {
+  @extend .button;
+
+  color: rgba(0, 0, 0, 0.5);
+  border-color: rgba(0, 0, 0, 0.5);
+
+  &:hover {
+    color: rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    background-color: unset;
+    box-shadow: none;
+    cursor: unset;
+  }
+}
