--- a/src/components/news-page/Article.module.scss
+++ b/src/components/news-page/Article.module.scss
@@ -11,18 +11,47 @@
 
 .section {
   @include subpage-content();
-
   max-width: 800px;
   margin-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  a {
-    width: 100%;
-    color: inherit;
-    text-decoration: none;
+  article {
+    width: 90%;
+    font-size: 16px;
+
+    h3 {
+      margin: 0;
+      text-align: left
+    }
+
+    h4 {
+      font-weight: 500;
+      margin: 15px 0;
+      color: rgba(0, 0, 0, 0.6);
+    }
+
+    p {
+      margin: 25px 0 50px 0;
+      text-align: justify;
+    }
+
+    figure {
+      max-height: 400px;
+      overflow: hidden;
+
+      img {
+        width: 100%;
+        transform: translateY(calc(20vh - 50%));
+        ;
+      }
+    }
   }
+
+
 }
+
+
 
 @include subpage-header-breakpoints();
