--- a/src/components/news-page/ArticleList.module.scss
+++ b/src/components/news-page/ArticleList.module.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 150px;
 
-  max-width: 800px;
+
   display: flex;
   background-color: #fafafa;
   border: 1px solid #efefef;
@@ -33,19 +33,29 @@
 .details_container {
   padding: 15px;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  color: rgba(0, 0, 0, 0.5);
 
   h3 {
-    margin: 0 0 5px 0;
+    margin: 0 0 15px 0;
     text-align: left;
+    color: black;
   }
 
   h4 {
-    margin-bottom: 10px;
-    color: rgba(0, 0, 0, 0.5);
+    font-weight: 500;
+    margin-bottom: 5px;
+    font-size: 12px;
   }
 
   p {
     font-size: 16px;
-    height: 100%;
+    overflow: hidden;
+
+    //multiline ellipsis trick
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 }
