--- a/src/components/interactive-map/Map.module.scss
+++ b/src/components/interactive-map/Map.module.scss
@@ -4,4 +4,8 @@
   height: 350px;
   width: 640px;
   max-width: 100vw;
+
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
 }
