--- a/src/components/main-page/latest-news/LatestNews.module.scss
+++ b/src/components/main-page/latest-news/LatestNews.module.scss
@@ -23,14 +23,12 @@
     margin-bottom: 20px;
 
     &:hover img {
-      transform: translate(-50%, -50%) scale(1.1);
+      transform: scale(1.1);
     }
 
     article {
       position: relative;
       height: 100%;
-
-
     }
   }
 }
@@ -54,12 +52,9 @@ div.photo {
   }
 
   img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    min-height: 100%;
-    min-width: 100%;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
     transition: 0.6s;
   }
 }
